Add query param encoding test
Signed-off-by: Artur Ciocanu <ciocanu@adobe.com>